--- a/src/main/res/layout/activity_chat.xml
+++ b/src/main/res/layout/activity_chat.xml
@@ -18,7 +18,7 @@
             android:layout_weight="1.9"
             android:layout_marginLeft="8dip"
             android:layout_marginTop="3dip"
-            android:text="<back"
+            android:text="Back"
             android:textAllCaps="false"
             style="?android:attr/borderlessButtonStyle"
             android:textColor="@android:color/white"
@@ -51,7 +51,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/divide-bar"
+        android:id="@+id/divide_bar"
         android:layout_width="match_parent"
         android:layout_height="2dip"
         android:orientation="horizontal"
@@ -66,7 +66,7 @@
         android:layout_height="84dip"
         android:orientation="horizontal"
         android:background="#e04F8F9F"
-        android:layout_below="@id/divide-bar"
+        android:layout_below="@id/divide_bar"
         android:paddingTop="7dip">
 
 
